2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_init): Don't clear BUFFER or OBJECT_DESCS.
	* thread.c (thread_init): Don't clear BUFFER.

2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* server.c (struct fault_info): Remove struct.
	(page_fault): Remove function.  Inline code in callers.
	(server_loop): Comment out code that prefaults pages in cap_copy
	and object_discarded_clear.

2008-11-16  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Count the number of shared pages which were
	unmapped, the total number of active pages and the total number of
	inactive pages.  Also print that.

2008-11-16  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_to_object_internal): Don't clear CAP->TYPE if
	object_find returns NULL.
	* server.c (page_fault): Look up the object using cap_to_object.
	Check the capability's version with the object's version.

2008-11-15  Neal H. Walfield  <neal@gnu.org>

	* zalloc.h (zalloc_internal): New declaration.
	(zalloc): Change to an inline function, which calls
	zalloc_internal if there is sufficient memory to satisfy the
	request.
	* zalloc.c (zalloc): Rename from this...
	(zalloc_internal): ... to this.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* pager.c (reclaim_from): Use list_dequeue instead of list_unlink.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_init): Set OBJECTS load factory to 30.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* memory.c (memory_frame_allocate): Take frames from the head of
	the available list.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): Dump the current statistics
	whenever an activity is destroyed.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* server.c (struct fault_info): New structure.
	(page_fault): New function.
	(server_loop): Implement page fault handling in terms of the new
	function.  When copying a capability that makes a page available
	in the caller's hardware address space, map it preemptively.  When